tdf#136814 Fix border padding in Word export

While converting cm to pt in the Word export filer, information is lost due to integer division. This patch tries to fix this by using floating-point division and (hopefully) proper rounding. The example document attached to the bug ticket works as expected now.

Change-Id: I4b5b2163e42932b5e877726d16635d9f02a43cb2