sw/source/filter/ww8/ww8atr.cxx
@@ -4366,7 +4366,7 @@ WW8_BRCVer9 WW8Export::TranslateBorderLine(const SvxBorderLine& rLine,
 
     // BRC.dptSpace
     sal_uInt16 nLDist = nDist;
-    nLDist /= 20;               // unit of measurement: pt
+    nLDist = rtl::math::round(nLDist / 20.0);               // unit of measurement: pt
     if( nLDist > 0x1f )
         nLDist = 0x1f;
 
